Closed MYFACES-177 thanks to Josh Holtzman.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167758 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,7 +2,10 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
-Changes in Release 1.0.9 
+Changes in Release 1.0.10
+* closed MYFACES-177
+----------------------------------------------------------------------
+Changes in Release 1.0.9
 * added support for portlet api (MYFACES-86). Thanks to Stan Silver (JBoss Group)
 * new CollapsiblePanel Component
 * new selectOneCountry component
