Add a renderFacetsIfSinglePage attribute & some bugfixes to x:dataScroller.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@168000 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -3,6 +3,7 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.10
+* added renderFacetsIfSinglePage to x:dataScroller
 * closed MYFACES-177
 * closed MYFACES-199
 * closed MYFACES-209
