--- a/src/myfaces/javax/faces/Messages.properties
+++ b/src/myfaces/javax/faces/Messages.properties
@@ -125,3 +125,6 @@ org.apache.myfaces.ticker.NOCONNECTION_detail = Maybe you are behind a firewall?
 
 org.apache.myfaces.ISBN.INVALID = Validation Error
 org.apache.myfaces.ISBN.INVALID_detail =The given value ({0}) is not a correct isbn code.
+
+org.apache.myfaces.tree2.MISSING_NODE        = Missing Node
+org.apache.myfaces.tree2.MISSING_NODE_detail = The requested node "{0}" does not exist.
