Add aliasBeansScope tag.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@169110 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -5,6 +5,7 @@ MyFaces Release Notes
 Changes in Release 1.0.10
 * added renderFacetsIfSinglePage to x:dataScroller
 * aliasBean : avoid evaluating expressions on each phase
+* added aliasBeansScope tag to make configuration with multiple aliasBean easier to manage.
 * closed MYFACES-177
 * closed MYFACES-199
 * closed MYFACES-209
