Fixes MYFACES-203 (Thanks to Bruno Aranda for updated Spanish translation of example messages.)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@178011 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/src/example/org/apache/myfaces/examples/resource/example_messages_ca.properties
+++ b/webapps/src/example/org/apache/myfaces/examples/resource/example_messages_ca.properties
@@ -7,9 +7,10 @@ nav_Examples        = Exemples
 nav_Sample_1        = Mostra 1
 nav_Sample_2        = Mostra 2
 nav_aliasBean       = Alias Bean
+nav_buffer          = Búffer
 nav_dataTable       = Exemple Mestre/Detall
 nav_sortTable       = Taula ordenable
-nav_Documentation   = Documentación
+nav_Documentation   = Documentació
 nav_Features        = Característiques
 nav_Info            = Informació
 nav_Contact         = Contacte
@@ -24,7 +25,8 @@ nav_Popup           = Popup
 nav_JsListener      = JavaScript Listener
 nav_dataList        = Llistes Dinàmiques
 nav_tree            = Arbre
-nav_treeTable       = Tabla en Arbre
+nav_tree            = Arbre2
+nav_treeTable       = Taula arbre
 nav_Validate		= Validacions
 nav_rssTicker		= RssTicker
 nav_dataScroller    = DataScroller
@@ -34,13 +36,16 @@ nav_css             = Full d'estils
 nav_newspaperTable  = Taula de notícies
 nav_InputHtml		= Editor Html
 nav_forceId         = ForceId
+nav_selectOneCountry= Selecciona un país
 
 nav_swapimage       = SwapImage
+nav_crossDataTable  = Taula creuada
+
 # buttons
 
 button_save = Desar 
 button_apply = Aplicar
-button_cancel = Cancel·lar
+button_cancel = Cancel.lar
 button_delete = Esborrar
 button_submit = Enviar
 
@@ -104,16 +109,16 @@ sales_tax = Impost
 doors=Portes
 
 validate_email = Email
-validate_credit = Tarjeta de crèdit
-validate_regexp = Expresió regular
+validate_credit = Targeta de crèdit
+validate_regexp = Expressió regular
 validate_equal = Igual
 validate_isbn = ISBN
 
 label_country_name = País
 label_country_iso = Codi ISO
 label_country_cities = Ciutats
-new_country = Afegir un país »
-country_edit_table = Editar tots els països »
+new_country = Afegir un país \uffbb
+country_edit_table = Editar tots els països \uffbb
 
 dataList_simple = Llista simple
 dataList_ul = Llista no ordenada
@@ -129,7 +134,7 @@ date_comp_text5=Dona'm una data i una hora
 date_comp_text6=La data i l'hora són:
 date_comp_button=Actualizar
 popup_today_string=Avui som:
-popup_week_string=Sem.
+popup_week_string=Setm.
 
 
 selectBoxPanel=Panell de SelectBox
@@ -160,3 +165,8 @@ css_msg=Una prova simple per
 
 forceOne=Valor 1
 forceTwo=Valor 2 (amb forceId)
+
+crosstable_field_column=etiqueta de columna
+crosstable_add_column=afegir columna
+crosstable_remove_column=eliminar columna
+crosstable_save_values=desar valors
