--- a/webapps/src/example/org/apache/myfaces/examples/resource/example_messages_es.properties
+++ b/webapps/src/example/org/apache/myfaces/examples/resource/example_messages_es.properties
@@ -6,7 +6,8 @@ nav_Home            = Inicio
 nav_Examples        = Ejemplos
 nav_Sample_1        = Muestra 1
 nav_Sample_2        = Muestra 2
-nav_aliasBean       = Alias Bean
+nav_aliasBean       = Bean con alias
+nav_buffer          = Buffer
 nav_dataTable       = Ejemplo Maestro/Detalle
 nav_sortTable       = Tabla ordenable
 nav_Documentation   = Documentación 
@@ -24,6 +25,7 @@ nav_Popup           = Popup
 nav_JsListener      = JavaScript Listener
 nav_dataList        = Listas Dinámicas
 nav_tree            = Árbol
+nav_tree            = Árbol2
 nav_treeTable       = Tabla en Árbol
 nav_Validate		= Validaciones
 nav_rssTicker		= RssTicker
@@ -34,8 +36,11 @@ nav_css             = Hoja de estilos
 nav_newspaperTable  = Tabla de Noticias
 nav_InputHtml		= Editor Html
 nav_forceId         = ForceId
+nav_selectOneCountry= Selecciona una casilla de país
 
 nav_swapimage       = SwapImage
+nav_crossDataTable  = Tabla cruzada
+
 # buttons
 
 button_save = Guardar 
@@ -101,7 +106,7 @@ radio_hint = Esta radio es una extensión de myfaces - ¡puedes utilizar código ht
 sort_cartype = Tipo de coche
 sort_carcolor = Color del coche
 sales_tax = Impuesto
-doors=Doors
+doors=Puertas
 
 validate_email = Email
 validate_credit = Tarjeta de crédito
@@ -112,8 +117,8 @@ validate_isbn = ISBN
 label_country_name = País
 label_country_iso = Código ISO
 label_country_cities = Ciudades
-new_country = Añadir un país »
-country_edit_table = Editar todos los países »
+new_country = Añadir un país \uffbb
+country_edit_table = Editar todos los países \uffbb
 
 dataList_simple = Lista simple
 dataList_ul = Lista no ordenada
@@ -160,3 +165,8 @@ css_msg=Una prueba simple para
 
 forceOne=Valor 1
 forceTwo=Valor 2 (con forceId)
+
+crosstable_field_column=etiqueta de columna
+crosstable_add_column=añadir columna
+crosstable_remove_column=eliminar columna
+crosstable_save_values=guardar valores
