fixed myfaces 241. Thanks to Mathias Werlitz!
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@178136 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -9,6 +9,7 @@ Changes in Release 1.0.10
 * closed MYFACES-177
 * closed MYFACES-199
 * closed MYFACES-209
+* closed MYFACES-241
 * closed MYFACES-242
 ----------------------------------------------------------------------
 Changes in Release 1.0.9
