Close MYFACES-263 (Faster UnicodeEncoder).
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@179514 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -20,6 +20,7 @@ Changes in Release 1.0.10
 * closed MYFACES-234
 * closed MYFACES-241
 * closed MYFACES-242
+* closed MYFACES-263
 ----------------------------------------------------------------------
 Changes in Release 1.0.9
 * added support for portlet api (MYFACES-86). Thanks to Stan Silver (JBoss Group)
