--- a/impl/src/main/resources/javax/faces/Messages_pl.properties
+++ b/impl/src/main/resources/javax/faces/Messages_pl.properties
@@ -14,114 +14,114 @@
 
 # standard messages (Spec. 2.5.1.4)
 
-javax.faces.component.UIInput.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.component.UIInput.CONVERSION_detail = "{0}": B\u0139\u201a\u00c4\u2026d podczas aktualizacji danych modelu.
+javax.faces.component.UIInput.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.component.UIInput.CONVERSION_detail = "{0}": B\u0142\u0105d podczas aktualizacji danych modelu.
 
-javax.faces.component.UIInput.REQUIRED        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.component.UIInput.REQUIRED_detail = "{0}": Warto\u0139\u203a\u00c4\u2021 jest wymagana.
+javax.faces.component.UIInput.REQUIRED        = B\u0142\u0105d walidacji
+javax.faces.component.UIInput.REQUIRED_detail = "{0}": Warto\u015b\u0107 jest wymagana.
 
-javax.faces.component.UISelectOne.INVALID        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.component.UISelectOne.INVALID_detail = "{0}": Warto\u0139\u203a\u00c4\u2021 nie jest poprawn\u00c4\u2026 opcj\u00c4\u2026.
+javax.faces.component.UISelectOne.INVALID        = B\u0142\u0105d walidacji
+javax.faces.component.UISelectOne.INVALID_detail = "{0}": Warto\u015b\u0107 nie jest poprawn\u0105 opcj\u0105.
 
-javax.faces.component.UISelectMany.INVALID        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.component.UISelectMany.INVALID_detail = "{0}": Warto\u0139\u203a\u00c4\u2021 nie jest poprawn\u00c4\u2026 opcj\u00c4\u2026.
+javax.faces.component.UISelectMany.INVALID        = B\u0142\u0105d walidacji
+javax.faces.component.UISelectMany.INVALID_detail = "{0}": Warto\u015b\u0107 nie jest poprawn\u0105 opcj\u0105.
 
-javax.faces.validator.NOT_IN_RANGE        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.validator.NOT_IN_RANGE_detail = "{2}": Podany atrybut nie zawiera si\u00c4\u2122 mi\u00c4\u2122dzy oczekiwanymi warto\u0139\u203aciami {0} i {1}.
+javax.faces.validator.NOT_IN_RANGE        = B\u0142\u0105d walidacji
+javax.faces.validator.NOT_IN_RANGE_detail = "{2}": Podany atrybut nie zawiera si\u0119 mi\u0119dzy oczekiwanymi warto\u015bciami {0} i {1}.
 
-javax.faces.validator.DoubleRangeValidator.LIMIT        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.validator.DoubleRangeValidator.LIMIT_detail = Podany atrybut nie podlega konwersji na w\u0139\u201aa\u0139\u203aciwy typ.
+javax.faces.validator.DoubleRangeValidator.LIMIT        = B\u0142\u0105d walidacji
+javax.faces.validator.DoubleRangeValidator.LIMIT_detail = Podany atrybut nie podlega konwersji na w\u0142a\u015bciwy typ.
 
-javax.faces.validator.DoubleRangeValidator.MAXIMUM        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.validator.DoubleRangeValidator.MAXIMUM_detail = "{1}": Warto\u0139\u203a\u00c4\u2021 jest wi\u00c4\u2122ksza ni\u0139\u013d dopuszczalne maksimum ''{0}''.
+javax.faces.validator.DoubleRangeValidator.MAXIMUM        = B\u0142\u0105d walidacji
+javax.faces.validator.DoubleRangeValidator.MAXIMUM_detail = "{1}": Warto\u015b\u0107 jest wi\u0119ksza ni\u017c dopuszczalne maksimum ''{0}''.
 
-javax.faces.validator.DoubleRangeValidator.MINIMUM        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.validator.DoubleRangeValidator.MINIMUM_detail = "{1}": Warto\u0139\u203a\u00c4\u2021 jest mniejsza ni\u0139\u013d dopuszczalne minimum ''{0}''.
+javax.faces.validator.DoubleRangeValidator.MINIMUM        = B\u0142\u0105d walidacji
+javax.faces.validator.DoubleRangeValidator.MINIMUM_detail = "{1}": Warto\u015b\u0107 jest mniejsza ni\u017c dopuszczalne minimum ''{0}''.
 
-javax.faces.validator.DoubleRangeValidator.TYPE        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.validator.DoubleRangeValidator.TYPE_detail = "{0}": Warto\u0139\u203a\u00c4\u2021 nie jest w\u0139\u201aa\u0139\u203aciwego typu.
+javax.faces.validator.DoubleRangeValidator.TYPE        = B\u0142\u0105d walidacji
+javax.faces.validator.DoubleRangeValidator.TYPE_detail = "{0}": Warto\u015b\u0107 nie jest w\u0142a\u015bciwego typu.
 
-javax.faces.validator.LengthValidator.LIMIT        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.validator.LengthValidator.LIMIT_detail = Podany atrybut nie podlega konwersji na w\u0139\u201aa\u0139\u203aciwy typ.
+javax.faces.validator.LengthValidator.LIMIT        = B\u0142\u0105d walidacji
+javax.faces.validator.LengthValidator.LIMIT_detail = Podany atrybut nie podlega konwersji na w\u0142a\u015bciwy typ.
 
-javax.faces.validator.LengthValidator.MAXIMUM        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.validator.LengthValidator.MAXIMUM_detail = "{1}": Warto\u0139\u203a\u00c4\u2021 jest d\u0139\u201au\u0139\u013dsza ni\u0139\u013d dopuszczalne maksimum {0} znak\u0102\u0142w.
+javax.faces.validator.LengthValidator.MAXIMUM        = B\u0142\u0105d walidacji
+javax.faces.validator.LengthValidator.MAXIMUM_detail = "{1}": Warto\u015b\u0107 jest d\u0142u\u017csza ni\u017c dopuszczalne maksimum {0} znak\u00f3w.
 
-javax.faces.validator.LengthValidator.MINIMUM        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.validator.LengthValidator.MINIMUM_detail = "{1}": Warto\u0139\u203a\u00c4\u2021 jest kr\u0102\u0142tsza ni\u0139\u013d dopuszczalne minimum {0} znak\u0102\u0142w.
+javax.faces.validator.LengthValidator.MINIMUM        = B\u0142\u0105d walidacji
+javax.faces.validator.LengthValidator.MINIMUM_detail = "{1}": Warto\u015b\u0107 jest kr\u00f3tsza ni\u017c dopuszczalne minimum {0} znak\u00f3w.
 
-javax.faces.validator.LongRangeValidator.LIMIT        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.validator.LongRangeValidator.LIMIT_detail = Podany atrybut nie podlega konwersji na w\u0139\u201aa\u0139\u203aciwy typ.
+javax.faces.validator.LongRangeValidator.LIMIT        = B\u0142\u0105d walidacji
+javax.faces.validator.LongRangeValidator.LIMIT_detail = Podany atrybut nie podlega konwersji na w\u0142a\u015bciwy typ.
 
-javax.faces.validator.LongRangeValidator.MAXIMUM        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.validator.LongRangeValidator.MAXIMUM_detail = "{1}": Warto\u0139\u203a\u00c4\u2021 jest wi\u00c4\u2122ksza ni\u0139\u013d dopuszczalne maksimum ''{0}''.
+javax.faces.validator.LongRangeValidator.MAXIMUM        = B\u0142\u0105d walidacji
+javax.faces.validator.LongRangeValidator.MAXIMUM_detail = "{1}": Warto\u015b\u0107 jest wi\u0119ksza ni\u017c dopuszczalne maksimum ''{0}''.
 
-javax.faces.validator.LongRangeValidator.MINIMUM        = B\u0139\u201a\u00c4\u2026d walidacji
-javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": Warto\u0139\u203a\u00c4\u2021 jest mniejsza ni\u0139\u013d dopuszczalne minimum ''{0}''.
+javax.faces.validator.LongRangeValidator.MINIMUM        = B\u0142\u0105d walidacji
+javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": Warto\u015b\u0107 jest mniejsza ni\u017c dopuszczalne minimum ''{0}''.
 
 javax.faces.validator.LongRangeValidator.TYPE        = Validation Error
-javax.faces.validator.LongRangeValidator.TYPE_detail = "{0}": Warto\u0139\u203a\u00c4\u2021 nie jest w\u0139\u201aa\u0139\u203aciwego typu.
+javax.faces.validator.LongRangeValidator.TYPE_detail = "{0}": Warto\u015b\u0107 nie jest w\u0142a\u015bciwego typu.
 
 
 # additional messages (not specified, but supported by myfaces API converters)
 
-javax.faces.convert.BigDecimalConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.BigDecimalConverter.CONVERSION_detail = Podana warto\u0139\u203a\u00c4\u2021 nie jest poprawn\u00c4\u2026 liczb\u00c4\u2026.
+javax.faces.convert.BigDecimalConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.BigDecimalConverter.CONVERSION_detail = Podana warto\u015b\u0107 nie jest poprawn\u0105 liczb\u0105.
 
-javax.faces.convert.BigIntegerConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.BigIntegerConverter.CONVERSION_detail = Podana warto\u0139\u203a\u00c4\u2021 nie jest poprawn\u00c4\u2026 liczb\u00c4\u2026.
+javax.faces.convert.BigIntegerConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.BigIntegerConverter.CONVERSION_detail = Podana warto\u015b\u0107 nie jest poprawn\u0105 liczb\u0105.
 
-javax.faces.convert.BooleanConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.BooleanConverter.CONVERSION_detail = Nie mo\u0139\u013dna przekszta\u0139\u201aci\u00c4\u2021 '{0}' do warto\u0139\u203aci logicznej.
+javax.faces.convert.BooleanConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.BooleanConverter.CONVERSION_detail = Nie mo\u017cna przekszta\u0142ci\u0107 '{0}' do warto\u015bci logicznej.
 
-javax.faces.convert.ByteConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.ByteConverter.CONVERSION_detail = Nie mo\u0139\u013dna przekszta\u0139\u201aci\u00c4\u2021 '{0}' do bajtu.
+javax.faces.convert.ByteConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.ByteConverter.CONVERSION_detail = Nie mo\u017cna przekszta\u0142ci\u0107 '{0}' do bajtu.
 
-javax.faces.convert.CharacterConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.CharacterConverter.CONVERSION_detail = Nie mo\u0139\u013dna przekszta\u0139\u201aci\u00c4\u2021 '{0}' do znaku.
+javax.faces.convert.CharacterConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.CharacterConverter.CONVERSION_detail = Nie mo\u017cna przekszta\u0142ci\u0107 '{0}' do znaku.
 
-javax.faces.convert.DateTimeConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.DateTimeConverter.CONVERSION_detail = "{1}": Podana warto\u0139\u203a\u00c4\u2021 nie jest poprawn\u00c4\u2026 dat\u00c4\u2026/czasem.
+javax.faces.convert.DateTimeConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.DateTimeConverter.CONVERSION_detail = "{1}": Podana warto\u015b\u0107 nie jest poprawn\u0105 dat\u0105/czasem.
 
-javax.faces.convert.DoubleConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.DoubleConverter.CONVERSION_detail = "{0}": Podana warto\u0139\u203a\u00c4\u2021 nie jest poprawn\u00c4\u2026 liczb\u00c4\u2026.
+javax.faces.convert.DoubleConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.DoubleConverter.CONVERSION_detail = "{0}": Podana warto\u015b\u0107 nie jest poprawn\u0105 liczb\u0105.
 
-javax.faces.convert.FloatConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.FloatConverter.CONVERSION_detail = "{0}": Podana warto\u0139\u203a\u00c4\u2021 nie jest poprawn\u00c4\u2026 liczb\u00c4\u2026.
+javax.faces.convert.FloatConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.FloatConverter.CONVERSION_detail = "{0}": Podana warto\u015b\u0107 nie jest poprawn\u0105 liczb\u0105.
 
-javax.faces.convert.IntegerConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.IntegerConverter.CONVERSION_detail = "{0}": Podana warto\u0139\u203a\u00c4\u2021 nie jest poprawn\u00c4\u2026 liczb\u00c4\u2026.
+javax.faces.convert.IntegerConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.IntegerConverter.CONVERSION_detail = "{0}": Podana warto\u015b\u0107 nie jest poprawn\u0105 liczb\u0105.
 
-javax.faces.convert.LongConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.LongConverter.CONVERSION_detail = "{0}": Podana warto\u0139\u203a\u00c4\u2021 nie jest poprawn\u00c4\u2026 liczb\u00c4\u2026.
+javax.faces.convert.LongConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.LongConverter.CONVERSION_detail = "{0}": Podana warto\u015b\u0107 nie jest poprawn\u0105 liczb\u0105.
 
-javax.faces.convert.NumberConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.NumberConverter.CONVERSION_detail = "{0}": Podana warto\u0139\u203a\u00c4\u2021 nie jest poprawn\u00c4\u2026 liczb\u00c4\u2026.
+javax.faces.convert.NumberConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.NumberConverter.CONVERSION_detail = "{0}": Podana warto\u015b\u0107 nie jest poprawn\u0105 liczb\u0105.
 
-javax.faces.convert.ShortConverter.CONVERSION        = B\u0139\u201a\u00c4\u2026d konwersji
-javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": Podana warto\u0139\u203a\u00c4\u2021 nie jest poprawn\u00c4\u2026 liczb\u00c4\u2026.
+javax.faces.convert.ShortConverter.CONVERSION        = B\u0142\u0105d konwersji
+javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": Podana warto\u015b\u0107 nie jest poprawn\u0105 liczb\u0105.
 
 
 # myfaces specific messages
 
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020w {0}
-org.apache.myfaces.Email.INVALID = B\u0139\u201a\u00c4\u2026d walidacji
-org.apache.myfaces.Email.INVALID_detail =Podana warto\u0139\u203a\u00c4\u2021 ({0}) nie jest poprawnym adresem email.
+org.apache.myfaces.Email.INVALID = B\u0142\u0105d walidacji
+org.apache.myfaces.Email.INVALID_detail =Podana warto\u015b\u0107 ({0}) nie jest poprawnym adresem email.
 
-org.apache.myfaces.Equal.INVALID = B\u0139\u201a\u00c4\u2026d walidacji
-org.apache.myfaces.Equal.INVALID_detail =Podana warto\u0139\u203a\u00c4\u2021 ({0}) nie jest r\u0102\u0142wna warto\u0139\u203aci "{1}".
+org.apache.myfaces.Equal.INVALID = B\u0142\u0105d walidacji
+org.apache.myfaces.Equal.INVALID_detail =Podana warto\u015b\u0107 ({0}) nie jest r\u00f3wna warto\u015bci "{1}".
 
-org.apache.myfaces.Creditcard.INVALID = B\u0139\u201a\u00c4\u2026d walidacji
-org.apache.myfaces.Creditcard.INVALID_detail =Podana warto\u0139\u203a\u00c4\u2021 ({0}) nie jest poprawnym numerem karty kredytowej
+org.apache.myfaces.Creditcard.INVALID = B\u0142\u0105d walidacji
+org.apache.myfaces.Creditcard.INVALID_detail =Podana warto\u015b\u0107 ({0}) nie jest poprawnym numerem karty kredytowej
 
-org.apache.myfaces.Regexpr.INVALID=B\u0139\u201a\u00c4\u2026d walidacji
-org.apache.myfaces.Regexpr.INVALID_detail=Podana warto\u0139\u203a\u00c4\u2021 ({0}) nie jest poprawna.
+org.apache.myfaces.Regexpr.INVALID=B\u0142\u0105d walidacji
+org.apache.myfaces.Regexpr.INVALID_detail=Podana warto\u015b\u0107 ({0}) nie jest poprawna.
 
-org.apache.myfaces.Date.INVALID = B\u0139\u201a\u00c4\u2026d walidacji
-org.apache.myfaces.Date.INVALID_detail =Podana warto\u0139\u203a\u00c4\u2021 ({0}) nie jest poprawn\u00c4\u2026 dat\u00c4\u2026
+org.apache.myfaces.Date.INVALID = B\u0142\u0105d walidacji
+org.apache.myfaces.Date.INVALID_detail =Podana warto\u015b\u0107 ({0}) nie jest poprawn\u0105 dat\u0105
 
-org.apache.myfaces.ticker.NOCONNECTION = Brak po\u0139\u201a\u00c4\u2026czenia: 
-org.apache.myfaces.ticker.NOCONNECTION_detail = Mo\u0139\u013de jeste\u0139\u203a za firewallem?
+org.apache.myfaces.ticker.NOCONNECTION = Brak po\u0142\u0105czenia: 
+org.apache.myfaces.ticker.NOCONNECTION_detail = Mo\u017ce jeste\u015b za firewallem?
 
-org.apache.myfaces.ISBN.INVALID = B\u0139\u201a\u00c4\u2026d walidacji
-org.apache.myfaces.ISBN.INVALID_detail =Podana warto\u0139\u203a\u00c4\u2021 ({0}) nie jest poprawnym numerem ISBN.
+org.apache.myfaces.ISBN.INVALID = B\u0142\u0105d walidacji
+org.apache.myfaces.ISBN.INVALID_detail =Podana warto\u015b\u0107 ({0}) nie jest poprawnym numerem ISBN.
