--- a/impl/src/main/resources/javax/faces/Messages.properties
+++ b/impl/src/main/resources/javax/faces/Messages.properties
@@ -14,96 +14,86 @@
 
 # standard messages (Spec. 2.5.2.4)
 
-javax.faces.component.UIInput.CONVERSION        = Conversion Error
-javax.faces.component.UIInput.CONVERSION_detail = "{0}": Conversion error occurred.
+# components
+javax.faces.component.UIInput.CONVERSION = {0}: Conversion error occurred.
+javax.faces.component.UIInput.REQUIRED = {0}: Validation Error: Value is required.
+javax.faces.component.UIInput.UPDATE = {0}: An error occurred when processing your submitted information. 
 
-javax.faces.component.UIInput.REQUIRED        = Validation Error
-javax.faces.component.UIInput.REQUIRED_detail = "{0}": Value is required.
+javax.faces.component.UISelectOne.INVALID = {0}: Validation Error: Value is not valid
+javax.faces.component.UISelectMany.INVALID = {0}: Validation Error: Value is not valid
 
-javax.faces.component.UISelectOne.INVALID        = Validation Error
-javax.faces.component.UISelectOne.INVALID_detail = "{0}": Value is not a valid option.
+# converters
+javax.faces.converter.BigDecimalConverter.DECIMAL = {2}: ''{0}'' must be a signed decimal number.
+javax.faces.converter.BigDecimalConverter.DECIMAL_detail = {2}: ''{0}'' must be a signed decimal number consisting of zero or more digits, that may be followed by a decimal point and fraction.  Example: {1}
+ 
+javax.faces.converter.BigIntegerConverter.BIGINTEGER = {2}: ''{0}'' must be a number consisting of one or more digits.
+javax.faces.converter.BigIntegerConverter.BIGINTEGER_detail = {2}: ''{0}'' must be a number consisting of one or more digits. Example: {1}
+ 
+javax.faces.converter.BooleanConverter.BOOLEAN = {1}: ''{0}'' must be 'true' or 'false'.
+javax.faces.converter.BooleanConverter.BOOLEAN_detail = {1}: ''{0}'' must be 'true' or 'false'.  Any value other than 'true' will evaluate to 'false'.
 
-javax.faces.component.UISelectMany.INVALID        = Validation Error
-javax.faces.component.UISelectMany.INVALID_detail = "{0}": Value is not a valid option.
+javax.faces.converter.ByteConverter.BYTE = {2}: ''{0}'' must be a number between 0 and 255.
+javax.faces.converter.ByteConverter.BYTE_detail = {2}: ''{0}'' must be a number between 0 and 255.  Example: {1}
+ 
+javax.faces.converter.CharacterConverter.CHARACTER = {1}: ''{0}'' must be a valid character.
+javax.faces.converter.CharacterConverter.CHARACTER_detail = {1}: ''{0}'' must be a valid ASCII character.
 
-javax.faces.validator.NOT_IN_RANGE        = Validation Error
-javax.faces.validator.NOT_IN_RANGE_detail = "{2}": Specified attribute is not between the expected values of {0} and {1}.
+javax.faces.converter.DateTimeConverter.DATE = {2}: ''{0}'' could not be understood as a date.
+javax.faces.converter.DateTimeConverter.DATE_detail = {2}: ''{0}'' could not be understood as a date. Example: {1} 
+javax.faces.converter.DateTimeConverter.TIME = {2}: ''{0}'' could not be understood as a time.
+javax.faces.converter.DateTimeConverter.TIME_detail = {2}: ''{0}'' could not be understood as a time. Example: {1} 
+javax.faces.converter.DateTimeConverter.DATETIME = {2}: ''{0}'' could not be understood as a date and time.
+javax.faces.converter.DateTimeConverter.DATETIME_detail = {2}: ''{0}'' could not be understood as a date and time. Example: {1} 
+javax.faces.converter.DateTimeConverter.PATTERN_TYPE = {1}: A 'pattern' or 'type' attribute must be specified to convert the value ''{0}''.
 
-javax.faces.validator.DoubleRangeValidator.LIMIT        = Validation Error
-javax.faces.validator.DoubleRangeValidator.LIMIT_detail = Specified attribute cannot be converted to the proper type.
+javax.faces.converter.DoubleConverter.DOUBLE = {2}: ''{0}'' must be a number consisting of one or more digits.
+javax.faces.converter.DoubleConverter.DOUBLE_detail = {2}: ''{0}'' must be a number between 4.9E-324 and 1.7976931348623157E308  Example: {1}
 
-javax.faces.validator.DoubleRangeValidator.MAXIMUM        = Validation Error
-javax.faces.validator.DoubleRangeValidator.MAXIMUM_detail = "{1}": Value is greater than allowable maximum of ''{0}''.
+javax.faces.converter.EnumConverter.ENUM = {2}: ''{0}'' must be convertible to an enum.
+javax.faces.converter.EnumConverter.ENUM_detail = {2}: ''{0}'' must be convertible to an enum from the enum that contains the constant ''{1}''.
+javax.faces.converter.EnumConverter.ENUM_NO_CLASS = {1}: ''{0}'' must be convertible to an enum from the enum, but no enum class provided.
+javax.faces.converter.EnumConverter.ENUM_NO_CLASS_detail = {1}: ''{0}'' must be convertible to an enum from the enum, but no enum class provided.
 
-javax.faces.validator.DoubleRangeValidator.MINIMUM        = Validation Error
-javax.faces.validator.DoubleRangeValidator.MINIMUM_detail = "{1}": Value is less than allowable minimum of ''{0}''.
+javax.faces.converter.FloatConverter.FLOAT = {2}: ''{0}'' must be a number consisting of one or more digits.
+javax.faces.converter.FloatConverter.FLOAT_detail = {2}: ''{0}'' must be a number between 1.4E-45 and 3.4028235E38  Example: {1}
 
-javax.faces.validator.DoubleRangeValidator.TYPE        = Validation Error
-javax.faces.validator.DoubleRangeValidator.TYPE_detail = "{0}": Value is not of the correct type.
+javax.faces.converter.IntegerConverter.INTEGER = {2}: ''{0}'' must be a number consisting of one or more digits.
+javax.faces.converter.IntegerConverter.INTEGER_detail = {2}: ''{0}'' must be a number between -2147483648 and 2147483647 Example: {1}
 
-javax.faces.validator.LengthValidator.LIMIT        = Validation Error
-javax.faces.validator.LengthValidator.LIMIT_detail = Specified attribute cannot be converted to proper type.
+javax.faces.converter.LongConverter.LONG = {2}: ''{0}'' must be a number consisting of one or more digits.
+javax.faces.converter.LongConverter.LONG_detail = {2}: ''{0}'' must be a number between -9223372036854775808 to 9223372036854775807 Example: {1}
 
-javax.faces.validator.LengthValidator.MAXIMUM        = Validation Error
-javax.faces.validator.LengthValidator.MAXIMUM_detail = "{1}": Value is longer than allowable maximum of {0} characters.
+javax.faces.converter.NumberConverter.CURRENCY = {2}: ''{0}'' could not be understood as a currency value.
+javax.faces.converter.NumberConverter.CURRENCY_detail = {2}: ''{0}'' could not be understood as a currency value. Example: {1}
+javax.faces.converter.NumberConverter.PERCENT = {2}: ''{0}'' could not be understood as a percentage.
+javax.faces.converter.NumberConverter.PERCENT_detail = {2}: ''{0}'' could not be understood as a percentage. Example: {1}
+javax.faces.converter.NumberConverter.NUMBER = {2}: ''{0}'' is not a number.
+javax.faces.converter.NumberConverter.NUMBER_detail = {2}: ''{0}'' is not a number. Example: {1}
+javax.faces.converter.NumberConverter.PATTERN = {2}: ''{0}'' is not a number pattern.
+javax.faces.converter.NumberConverter.PATTERN_detail = {2}: ''{0}'' is not a number pattern. Example: {1}
 
-javax.faces.validator.LengthValidator.MINIMUM        = Validation Error
-javax.faces.validator.LengthValidator.MINIMUM_detail = "{1}": Value is shorter than allowable minimum of {0} characters.
+javax.faces.converter.ShortConverter.SHORT = {2}: ''{0}'' must be a number consisting of one or more digits.
+javax.faces.converter.ShortConverter.SHORT_detail = {2}: ''{0}'' must be a number between -32768 and 32767 Example: {1}
 
-javax.faces.validator.LongRangeValidator.LIMIT        = Validation Error
-javax.faces.validator.LongRangeValidator.LIMIT_detail = Specified attribute cannot be converted to proper type.
+javax.faces.converter.STRING = {1}: Could not convert ''{0}'' to a string.
 
-javax.faces.validator.LongRangeValidator.MAXIMUM        = Validation Error
-javax.faces.validator.LongRangeValidator.MAXIMUM_detail = "{1}": Value is greater than allowable maximum of ''{0}''.
+# validators
+javax.faces.validator.NOT_IN_RANGE = Validation Error: Specified attribute is not between the expected values of {0} and {1}.
 
-javax.faces.validator.LongRangeValidator.MINIMUM        = Validation Error
-javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": Value is less than allowable minimum of ''{0}''.
+javax.faces.validator.DoubleRangeValidator.MAXIMUM = {1}: Validation Error: Value is greater than allowable maximum of "{0}"
+javax.faces.validator.DoubleRangeValidator.MINIMUM = {1}: Validation Error: Value is less than allowable minimum of ''{0}''
+javax.faces.validator.DoubleRangeValidator.NOT_IN_RANGE = {2}: Validation Error: Specified attribute is not between the expected values of {0} and {1}.
+javax.faces.validator.DoubleRangeValidator.TYPE = {0}: Validation Error: Value is not of the correct type
 
-javax.faces.validator.LongRangeValidator.TYPE        = Validation Error
-javax.faces.validator.LongRangeValidator.TYPE_detail = "{0}": Value is not of the correct type.
+javax.faces.validator.LengthValidator.MAXIMUM = {1}: Validation Error: Value is greater than allowable maximum of ''{0}''
+javax.faces.validator.LengthValidator.MINIMUM = {1}: Validation Error: Value is less than allowable minimum of ''{0}''
 
-
-# additional messages (not specified, but supported by myfaces API converters)
-
-javax.faces.convert.BigDecimalConverter.CONVERSION        = Conversion Error
-javax.faces.convert.BigDecimalConverter.CONVERSION_detail = "{0}": Specified value is not a valid number.
-
-javax.faces.convert.BigIntegerConverter.CONVERSION        = Conversion Error
-javax.faces.convert.BigIntegerConverter.CONVERSION_detail = "{0}": Specified value is not a valid number.
-
-javax.faces.convert.BooleanConverter.CONVERSION        = Conversion Error
-javax.faces.convert.BooleanConverter.CONVERSION_detail = "{1}": Could not convert '{0}' to Boolean.
-
-javax.faces.convert.ByteConverter.CONVERSION        = Conversion Error
-javax.faces.convert.ByteConverter.CONVERSION_detail = "{1}": Could not convert '{0}' to Byte.
-
-javax.faces.convert.CharacterConverter.CONVERSION        = Conversion Error
-javax.faces.convert.CharacterConverter.CONVERSION_detail = Could not convert '{0}' to Character.
-
-javax.faces.convert.DateTimeConverter.CONVERSION        = Conversion Error
-javax.faces.convert.DateTimeConverter.CONVERSION_detail = "{1}": Specified value is not a valid date/time.
-
-javax.faces.convert.DoubleConverter.CONVERSION        = Conversion Error
-javax.faces.convert.DoubleConverter.CONVERSION_detail = "{0}": Specified value is not a valid number.
-
-javax.faces.convert.FloatConverter.CONVERSION        = Conversion Error
-javax.faces.convert.FloatConverter.CONVERSION_detail = "{0}": Specified value is not a valid number.
-
-javax.faces.convert.IntegerConverter.CONVERSION        = Conversion Error
-javax.faces.convert.IntegerConverter.CONVERSION_detail = "{0}": Specified value is not a valid number.
-
-javax.faces.convert.LongConverter.CONVERSION        = Conversion Error
-javax.faces.convert.LongConverter.CONVERSION_detail = "{0}": Specified value is not a valid number.
-
-javax.faces.convert.NumberConverter.CONVERSION        = Conversion Error
-javax.faces.convert.NumberConverter.CONVERSION_detail = "{0}": Specified value is not a valid number.
-
-javax.faces.convert.ShortConverter.CONVERSION        = Conversion Error
-javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": Specified value is not a valid number.
-
+javax.faces.validator.LongRangeValidator.MAXIMUM = {1}: Validation Error: Value is greater than allowable maximum of ''{0}''
+javax.faces.validator.LongRangeValidator.MINIMUM = {1}: Validation Error: Value is less than allowable minimum of ''{0}''
+javax.faces.validator.LongRangeValidator.NOT_IN_RANGE = {2}: Validation Error: Specified attribute is not between the expected values of {0} and {1}.
+javax.faces.validator.LongRangeValidator.TYPE = {0}: Validation Error: Value is not of the correct type.
 
 # myfaces specific messages
-
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 org.apache.myfaces.Email.INVALID = Validation Error
 org.apache.myfaces.Email.INVALID_detail =The given value ({0}) is not a correct email-address.
