--- a/impl/src/main/resources/javax/faces/Messages_fr.properties
+++ b/impl/src/main/resources/javax/faces/Messages_fr.properties
@@ -72,16 +72,16 @@ javax.faces.convert.BigIntegerConverter.CONVERSION        = Erreur de conversion
 javax.faces.convert.BigIntegerConverter.CONVERSION_detail = La donn\u00e9e n''est pas un nombre valide.
 
 javax.faces.convert.BooleanConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.BooleanConverter.CONVERSION_detail = Conversion de '{0}' en Boolean impossible.
+javax.faces.convert.BooleanConverter.CONVERSION_detail = Conversion de "{0}" en Boolean impossible.
 
 javax.faces.convert.ByteConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.ByteConverter.CONVERSION_detail = Conversion de '{0}' en Octet impossible.
+javax.faces.convert.ByteConverter.CONVERSION_detail = Conversion de "{0}" en Octet impossible.
 
 javax.faces.convert.CharacterConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.CharacterConverter.CONVERSION_detail = Conversion de '{0}' en Caract\u00e8re impossible.
+javax.faces.convert.CharacterConverter.CONVERSION_detail = Conversion de "{0}" en Caract\u00e8re impossible.
 
 javax.faces.convert.DateTimeConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.DateTimeConverter.CONVERSION_detail = "{1}": Conversion de '{0}' en Date/Heure impossible.
+javax.faces.convert.DateTimeConverter.CONVERSION_detail = "{1}": Conversion de "{0}" en Date/Heure impossible.
 
 javax.faces.convert.DoubleConverter.CONVERSION        = Erreur de conversion
 javax.faces.convert.DoubleConverter.CONVERSION_detail = "{0}": La donn\u00e9e n''est pas un nombre valide.
