More French translations.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@691347 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/main/resources/javax/faces/Messages_fr.properties
+++ b/impl/src/main/resources/javax/faces/Messages_fr.properties
@@ -104,24 +104,24 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": La donn\u00e9e n''
 
 # myfaces specific messages
 
-org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = in {0}
+org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = dans {0}
 org.apache.myfaces.Email.INVALID = Erreur de Validation
-org.apache.myfaces.Email.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct email-address.
+org.apache.myfaces.Email.INVALID_detail = La valeur saisie ({0}) n''est pas une adresse de couriel correcte.
 
 org.apache.myfaces.Equal.INVALID = Erreur de Validation
-org.apache.myfaces.Equal.INVALID_detail =TRANSLATE__The given value ({0}) is not equal with value of "{1}".
+org.apache.myfaces.Equal.INVALID_detail = La valeur saisie ({0}) n''est pas \u00e9gale \u00e0 celle de "{1}".
 
 org.apache.myfaces.Creditcard.INVALID = Erreur de Validation
-org.apache.myfaces.Creditcard.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct creditcard
+org.apache.myfaces.Creditcard.INVALID_detail = La valeur saisie ({0}) n''est pas un num\u00e9ro de carte de cr\u00e9dit correct.
 
-org.apache.myfaces.Regexpr.INVALID=Erreur de Validation
-org.apache.myfaces.Regexpr.INVALID_detail=TRANSLATE__The given value ({0}) is not valid.
+org.apache.myfaces.Regexpr.INVALID= Erreur de Validation
+org.apache.myfaces.Regexpr.INVALID_detail= La valeur saisie ({0}) n''est pas une expression r\u00e9guli\u00e8re valide.
 
 org.apache.myfaces.Date.INVALID = Erreur de Validation
-org.apache.myfaces.Date.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct date
+org.apache.myfaces.Date.INVALID_detail = La valeur saisie ({0}) n''est pas une date correcte.
 
 org.apache.myfaces.ticker.NOCONNECTION = Pas de connexion : 
 org.apache.myfaces.ticker.NOCONNECTION_detail = Peut-\u00eatre \u00eates-vous derri\u00e8re un firewall 
 
 org.apache.myfaces.ISBN.INVALID = Erreur de Validation
-org.apache.myfaces.ISBN.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct isbn code.
+org.apache.myfaces.ISBN.INVALID_detail = La valeur saisie ({0}) n''est pas une code ISBN correct.
