Fixed some French translation errors
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@711290 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/main/resources/javax/faces/Messages_fr.properties
+++ b/impl/src/main/resources/javax/faces/Messages_fr.properties
@@ -48,7 +48,7 @@ javax.faces.validator.LengthValidator.MAXIMUM        = Erreur de Validation
 javax.faces.validator.LengthValidator.MAXIMUM_detail = "{1}": La donn\u00e9e a plus que les {0} caract\u00e9res maximum authoris\u00e9s.
 
 javax.faces.validator.LengthValidator.MINIMUM        = Erreur de Validation
-javax.faces.validator.LengthValidator.MINIMUM_detail = "{1}": La donn\u00e9e a moins que les {0} caract\u00e9res maximum requis.
+javax.faces.validator.LengthValidator.MINIMUM_detail = "{1}": La donn\u00e9e doit comporter au moins {0} caract\u00e9res.
 
 javax.faces.validator.LongRangeValidator.LIMIT        = Erreur de Validation
 javax.faces.validator.LongRangeValidator.LIMIT_detail = La donn\u00e9e ne peut \u00e9tre convertie dans le bon type.
@@ -57,7 +57,7 @@ javax.faces.validator.LongRangeValidator.MAXIMUM        = Erreur de Validation
 javax.faces.validator.LongRangeValidator.MAXIMUM_detail = "{1}": La donn\u00e9e est sup\u00e9rieur au maximum authoris\u00e9 de ''{0}''.
 
 javax.faces.validator.LongRangeValidator.MINIMUM        = Erreur de Validation
-javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": La donn\u00e9e est inf\u00e9rieur au maximum authoris\u00e9 de ''{0}''.
+javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": La donn\u00e9e est inf\u00e9rieur au minimum authoris\u00e9 de ''{0}''.
 
 javax.faces.validator.LongRangeValidator.TYPE        = Erreur de Validation
 javax.faces.validator.LongRangeValidator.TYPE_detail = "{0}": La donn\u00e9e n''est pas du bon type.
