--- a/impl/src/main/resources/javax/faces/Messages_nl.properties
+++ b/impl/src/main/resources/javax/faces/Messages_nl.properties
@@ -62,6 +62,7 @@ javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": De gegeven waar
 javax.faces.validator.LongRangeValidator.TYPE        = Type fout
 javax.faces.validator.LongRangeValidator.TYPE_detail = "{0}": De invoer kan niet worden geïnterpreteerd als een geheeld getal.
 
+javax.faces.validator.RegexValidator.NOT_MATCHED = {1}: De invoer komt niet overeen met het patroon ''{0}''
 
 # additional messages (not specified, but supported by myfaces API converters)
 
