--- a/impl/src/main/resources/javax/faces/Messages_en.properties
+++ b/impl/src/main/resources/javax/faces/Messages_en.properties
@@ -93,6 +93,8 @@ javax.faces.validator.LongRangeValidator.MINIMUM = {1}: Validation Error: Value 
 javax.faces.validator.LongRangeValidator.NOT_IN_RANGE = {2}: Validation Error: Specified attribute is not between the expected values of {0} and {1}.
 javax.faces.validator.LongRangeValidator.TYPE = {0}: Validation Error: Value is not of the correct type.
 
+javax.faces.validator.RegexValidator.NOT_MATCHED = {1}: Validation Error: Value not according to pattern ''{0}''
+
 # myfaces specific messages
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 org.apache.myfaces.Email.INVALID = Validation Error
