MYFACES-2288 Implement Bean Validation
This is the first part, where the default Bean Validator is added to every input field when present on the build path.
Still working on the validateBean tag, which is a quite difficult one...

git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@805524 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/main/resources/javax/faces/Messages.properties
+++ b/impl/src/main/resources/javax/faces/Messages.properties
@@ -95,6 +95,8 @@ javax.faces.validator.LongRangeValidator.TYPE = {0}: Validation Error: Value is 
 
 javax.faces.validator.RegexValidator.NOT_MATCHED = {1}: Validation Error: Value not according to pattern ''{0}''
 
+javax.faces.validator.BeanValidator.MESSAGE = {1}: {0}
+
 # myfaces specific messages
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 org.apache.myfaces.Email.INVALID = Validation Error
