MYFACES-2631 javax.faces.Messages.zh lacks two properties.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@928663 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/src/main/resources/javax/faces/Messages_zh_CN.properties
+++ b/api/src/main/resources/javax/faces/Messages_zh_CN.properties
@@ -41,6 +41,9 @@ javax.faces.validator.DoubleRangeValidator.MINIMUM_detail = "{1}": \u8be5\u503c\
 javax.faces.validator.DoubleRangeValidator.TYPE        = \u9a8c\u8bc1\u9519\u8bef
 javax.faces.validator.DoubleRangeValidator.TYPE_detail = "{0}": \u8be5\u503c\u4e0d\u662f\u5141\u8bb8\u7684\u7c7b\u578b.
 
+javax.faces.validator.DoubleRangeValidator.NOT_IN_RANGE = \u9A8C\u8BC1\u9519\u8BEF
+javax.faces.validator.DoubleRangeValidator.NOT_IN_RANGE_detail = \u8BE5\u503C\u4E0D\u5728\u5141\u8BB8\u7684 {0} \u81F3 {1} \u5305\u56F4\u5185.
+
 javax.faces.validator.LengthValidator.LIMIT        = \u9a8c\u8bc1\u9519\u8bef
 javax.faces.validator.LengthValidator.LIMIT_detail = \u65e0\u6cd5\u5c06\u8be5\u5c5e\u6027\u8f6c\u6362\u6210\u5408\u9002\u7684\u7c7b\u578b.
 
@@ -61,6 +64,9 @@ javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": \u8be5\u503c\u5
 
 javax.faces.validator.LongRangeValidator.TYPE        = \u9a8c\u8bc1\u9519\u8bef
 javax.faces.validator.LongRangeValidator.TYPE_detail = "{0}": \u8be5\u503c\u7c7b\u578b\u4e0d\u6b63\u786e.
+
+javax.faces.validator.LongRangeValidator.NOT_IN_RANGE = \u9A8C\u8BC1\u9519\u8BEF
+javax.faces.validator.LongRangeValidator.NOT_IN_RANGE_detail = \u8BE5\u503C\u4E0D\u5728\u5141\u8BB8\u7684 {0} \u81F3 {1} \u5305\u56F4\u5185.
 
 
 # additional messages (not specified, but supported by myfaces API converters)
